Full working K8s microservices deployment with monitoring

--- a/k8s-manifests/deployments/cartservice-deployment.yaml
+++ b/k8s-manifests/deployments/cartservice-deployment.yaml
@@ -17,6 +17,9 @@ spec:
         app: cartservice
         tier: backend
         service: cart
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "7070"
     spec:
       terminationGracePeriodSeconds: 5
       containers:
