--- a/k8s-manifests/monitoring/grafana-service.yaml
+++ b/k8s-manifests/monitoring/grafana-service.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: monitoring
   labels:
     app: grafana
+    tier: monitoring
+    service: grafana
 spec:
   type: NodePort
   selector:
