--- a/k8s-manifests/monitoring/prometheus-deployment.yaml
+++ b/k8s-manifests/monitoring/prometheus-deployment.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: monitoring
   labels:
     app: prometheus
+    tier: monitoring
+    service: prometheus
 spec:
   replicas: 1
   selector:
@@ -14,7 +16,10 @@ spec:
     metadata:
       labels:
         app: prometheus
+        tier: monitoring
+        service: prometheus
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
       - name: prometheus
         image: prom/prometheus:v2.37.0
