--- a/k8s-manifests/deployments/frontend-deployment.yaml
+++ b/k8s-manifests/deployments/frontend-deployment.yaml
@@ -17,6 +17,9 @@ spec:
         app: frontend
         tier: frontend
         service: frontend
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
     spec:
       terminationGracePeriodSeconds: 5
       serviceAccountName: frontend
