updated Prometheus to scrape data

--- a/k8s-manifests/monitoring/prometheus-deployment.yaml
+++ b/k8s-manifests/monitoring/prometheus-deployment.yaml
@@ -19,6 +19,7 @@ spec:
         tier: monitoring
         service: prometheus
     spec:
+      serviceAccountName: prometheus
       terminationGracePeriodSeconds: 30
       containers:
       - name: prometheus
