--- a/k8s-manifests/monitoring/prometheus-configmap.yaml
+++ b/k8s-manifests/monitoring/prometheus-configmap.yaml
@@ -20,6 +20,8 @@ data:
           action: replace
           target_label: __metrics_path__
           regex: (.+)
+        - target_label: __metrics_path__
+          replacement: /healthz
         - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
           action: replace
           regex: ([^:]+)(?::\d+)?;(\d+)
